--- a/index.html
+++ b/index.html
@@ -6,15 +6,23 @@
     <title>The strive for the perfect code</title>
   </head>
 
-<body>
+<header>
   <nav>
+  
     <ul>
-      <li><a href="contact.html"> Contact </a></li>
+      <li><a href="contact.html"> Resume</a></li>
       <li><a href="projects.html"> Portfolio</a> </li>
-      <li><a href="aboutme.html" >Bio</a></li>
+      <li><a href="aboutme.html" >About Me</a></li>
       <li><a href="index.html"> Home </a></li>
+      <li><img src="images/Logo.jpg"></div>
     </ul>
   </nav>
+
+
+</header>
+
+<body>
+
 
 
   <!-- <div>
