--- a/aboutme.html
+++ b/aboutme.html
@@ -8,11 +8,10 @@
   <body>
     <nav>
       <ul>
-
-        <li><a href="contact.html"> Resume </a></li>
-        <li><a href="projects.html"> Portfolio</a> </li>
+        <li><a href="resume.html"> Resume </a></li>
+        <li><a href="portfolio.html"> Portfolio</a> </li>
         <li><a href="aboutme.html" >About Me</a></li>
-        <li><a href="index.html"> Home </a></li>
+        <li><a href="home.html"> Home </a></li>
       </ul>
     </nav>
 
