--- a/home.html
+++ b/home.html
@@ -8,17 +8,13 @@
 
 <header>
   <nav>
-  
     <ul>
-      <li><a href="contact.html"> Resume</a></li>
-      <li><a href="projects.html"> Portfolio</a> </li>
+      <li><a href="resume.html"> Resume </a></li>
+      <li><a href="portfolio.html"> Portfolio</a> </li>
       <li><a href="aboutme.html" >About Me</a></li>
-      <li><a href="index.html"> Home </a></li>
-      <li><img src="images/Logo.jpg"></div>
+      <li><a href="home.html"> Home </a></li>
     </ul>
   </nav>
-
-
 </header>
 
 <body>
