--- a/home.html
+++ b/home.html
@@ -2,29 +2,121 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>The strive for the perfect code</title>
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
+
+    <title> David Chua: Web Developer</title>
+    <link href="https://fonts.googleapis.com/css?family=Merriweather|Roboto+Condensed" rel="stylesheet">
   </head>
 
 <header>
   <nav>
     <ul>
-      <li><a href="resume.html"> Resume </a></li>
-      <li><a href="portfolio.html"> Portfolio</a> </li>
-      <li><a href="aboutme.html" >About Me</a></li>
-      <li><a href="home.html"> Home </a></li>
+      <li><a href="resume.html"><i class="fa fa-folder-open" aria-hidden="true"></i>Resume </a></li>
+      <li><a href="portfolio.html"><i class="fa fa-desktop" aria-hidden="true"></i> Portfolio</a> </li>
+      <li><a href="aboutme.html"><i class="fa fa-user-circle-o" aria-hidden="true"></i>About Me</a></li>
+      <li><a href="home.html"><i class="fa fa-home" aria-hidden="true"></i><span> Home</span> </a></li>
     </ul>
   </nav>
 </header>
-
 <body>
 
+<div class="Intro">
+  <h1 class="Me"> David Chua </h1>
+  <div class="block-line"></div>
+  <h5> Web Developer || Foodie || Fitness Enthusiast </h5>
+</div>
+
+<div class="galaxy"></div>
+
+<div class="About">
+    <h1> About Me </h1>
+    <div class="block-line"></div>
+    <h4> I am a full stack web developer, food lover, and recently became a fitness enthusiast. I am a visual specialist that is passionate about his code. I am a creative thinker, a resourceful problem solver, and a jack of all trades. Coding brings out my creativity and challenges me in every possible way, which is why I'm in love with it. My hunger to learn more allows me to become a better coder each and everyday. </h4>
+  </div>
+
+<div class="screen"></div>
+
+<div>
+  <h1> Language, Frameworks, and Tools </h1>
+    <div class="block-line"></div>
+  <div class="about_row">
+<!-- angularJS -->
+    <div class="column">
+      <i class="devicon-angularjs-plain colored"></i>
+    </div>
+<!-- CSS3 -->
+    <div class="column">
+      <i class="devicon-css3-plain"></i>
+    </div>
+  <!-- Rails -->
+    <div class="column">
+      <i class="devicon-rails-plain-wordmark colored"></i>
+    </div>
+<!-- HTML5 -->
+    <div class="column">
+      <i class="devicon-html5-plain-wordmark colored"></i>
+    </div>
+    <!-- Node JS -->
+    <div class="column">
+      <i class="devicon-nodejs-plain-wordmark"></i>
+    </div>
+<!-- Javascript -->
+    <div class="column">
+      <i class="devicon-javascript-plain"></i>
+    </div>
+<!-- Ruby -->
+    <div class="column">
+      <i class="devicon-ruby-plain-wordmark colored"></i>
+    </div>
+<!-- jQuery -->
+    <div class="column">
+      <i class="devicon-jquery-plain-wordmark colored"></i>
+    </div>
+<!-- PostgreSQL -->
+    <div class="column">
+      <i class="devicon-postgresql-plain-wordmark colored"></i>
+    </div>
+<!-- MongoDB -->
+    <div class="column">
+    <i class="devicon-mongodb-plain-wordmark"></i></i>
+    </div>
+  <!-- Git -->
+    <div class="column">
+      <i class="devicon-git-plain-wordmark"></i>
+    </div>
+<!-- Github -->
+    <div class="column">
+      <i class="devicon-github-plain-wordmark"></i>
+    </div>
+<!-- Heroku -->
+    <div class="column">
+      <i class="devicon-heroku-plain-wordmark colored"></i>
+    </div>
+    <!-- Google Chrome -->
+    <div class="column">
+      <i class="devicon-chrome-plain-wordmark"></i>
+    </div>
+  <!-- Trello -->
+  <div class="column">
+    <i class="devicon-trello-plain-wordmark colored"></i>
+  </div>
+  <!-- Photoshop -->
+  <div class="column">
+    <i class="devicon-photoshop-plain colored"></i>
+  </div>
+  <!-- and more -->
+  <div class="more" class="column">
+    <h4> & more.. </h4>
+  </div>
 
 
-  <!-- <div>
-    <img src="images/GalaxyImage.jpg" alt="Galaxy"class="Galaxy">
-  </div> -->
 
-</body>
+  </div>
+
+
+
 
 </html>
