--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
 <header>
   <nav>
     <ul>
-      <li><a href="resume.html"><i class="fa fa-folder-open" aria-hidden="true"></i>Resume </a></li>
-      <li><a href="portfolio.html"><i class="fa fa-desktop" aria-hidden="true"></i> Portfolio</a> </li>
-      <li><a href="aboutme.html"><i class="fa fa-user-circle-o" aria-hidden="true"></i>About Me</a></li>
-      <li><a href="home.html"><i class="fa fa-home" aria-hidden="true"></i><span> Home</span> </a></li>
+      <li><a href="#contact"><i class="fa fa-folder-open" aria-hidden="true"></i>Contact Me </a></li>
+      <li><a href="#portfolio"><i class="fa fa-desktop" aria-hidden="true"></i> Portfolio</a> </li>
+      <li><a href="#skills"> <i class="fa fa-trophy" aria-hidden="true"></i></i> Skills </a> </li>
+      <li><a href="#aboutme"><i class="fa fa-user-circle-o" aria-hidden="true"></i>About Me</a></li>
+      <li><a href="#home"><i class="fa fa-home" aria-hidden="true"></i><span> Home</span> </a></li>
     </ul>
   </nav>
 </header>
 <body>
 
-<div class="Intro">
+<div id="home" class="Intro">
   <h1 class="Me"> David Chua </h1>
   <div class="block-line"></div>
   <h5> Web Developer || Foodie || Fitness Enthusiast </h5>
@@ -31,7 +32,7 @@
 
 <div class="galaxy"></div>
 
-<div class="About">
+<div id="aboutme" class="About">
     <h1> About Me </h1>
     <div class="block-line"></div>
     <h4> I am a full stack web developer, food lover, and recently became a fitness enthusiast. I am a visual specialist that is passionate about his code. I am a creative thinker, a resourceful problem solver, and a jack of all trades. Coding brings out my creativity and challenges me in every possible way, which is why I'm in love with it. My hunger to learn more allows me to become a better coder each and everyday. </h4>
@@ -39,9 +40,10 @@
 
 <div class="screen"></div>
 
-<div>
+<div id="skills">
   <h1> Language, Frameworks, and Tools </h1>
     <div class="block-line"></div>
+
   <div class="about_row">
 <!-- angularJS -->
     <div class="column">
@@ -111,11 +113,52 @@
   <div class="more" class="column">
     <h4> & more.. </h4>
   </div>
+  </div>
+</div>
 
+<div class="global"> </div>
 
+<div id="portfolio" >
+    <h1> Portfolio </h1>
+    <div class="block-line"></div>
+</div>
 
+<div class="container">
+
+  <div class="Apps" >
+    <img src="./images/Kogi.jpg">
   </div>
 
+  <div class="About_Apps">
+    <p> <a href="https://where-is-my-kogi.herokuapp.com/" target="_blank"> Where's My Kogi</a><br />
+    <small> Still in its early stages. Where's My Kogi is a web application build using NodeJS, MongoDB, Express. It is a korean bbq tracker that logs the user's restaurant visited along with some information about the restaurant. Check out  to log your newly discovered Kbbq restaurants! </small> </p>
+  </div>
+
+  <div class="Apps">
+    <img src="./images/Cooking.jpg">
+  </div>
+
+  <div class="About_Apps">
+    <p> <a href="https://afternoon-everglades-38921.herokuapp.com/#/" target="_blank"> What's Cooking</a> <br />
+    <small> A web application designed for weekly food planning to lead a healthy lifestyle. It is build using a full MEAN stack (MongoDB, Experss, Angular, and NodeJS). A group project that allowed us to experience a remote group interaction using Github repos to push/pull and merge code for collaboration purposes. It is a project that allowed us to appreciate github technologies in relation to version control. </small> </p>
+  </div>
+
+  <div class="Apps">
+    <img src="./images/Topshelf.jpg">
+  </div>
+
+  <div class="About_Apps">
+    <p> <a href="https://my-books-application.herokuapp.com/#/" target="_blank"> Topshelf Imaginations</a> <br />
+    <small> A two day MEAN stack project that is able to create a full CRUD for a library collections of all the users in the site. </small></p>
+  </div>
+</div>
+
+<div class="tech"> </div>
+
+<div id="portfolio" >
+    <h1> Contact </h1>
+    <div class="block-line"></div>
+</div>
 
 
 
