--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <div id="aboutme" class="About">
     <h1> About Me </h1>
     <div class="block-line"></div>
-    <h4> I am a full stack web developer, food lover, and recently became a fitness enthusiast. I am a visual specialist that is passionate about his code. I am a creative thinker, a resourceful problem solver, and a jack of all trades. Coding brings out my creativity and challenges me in every possible way, which is why I'm in love with it. My hunger to learn more allows me to become a better coder each and everyday. </h4>
+    <h4> Full stack web developer, food lover, and recently, a fitness enthusiast. Visual specialist with a passion for coding. I am a creative thinker, a resourceful problem solver, and a jack of all trades. Coding brings out my creativity and challenges me in every possible way, which is why I am in love with it. My eagerness to learn more allows me to become a better coder each and everyday.</h4>
   </div>
 
 <div class="screen"></div>
@@ -155,10 +155,24 @@
 
 <div class="tech"> </div>
 
-<div id="portfolio" >
+<div id="contact" >
     <h1> Contact </h1>
     <div class="block-line"></div>
 </div>
+
+  <div class="social_media">
+    <a class="linkedin" href="https://www.linkedin.com/pub/david-paolo-chua/58/116/773" target="_blank">
+          <img src="./images/LinkedIn.png"  alt="View David Paolo Chua's profile on LinkedIn">
+    </a>
+    <a class="github" href="https://github.com/david-chua">
+      <img src= "./images/Github.png" alt="David's Github" target="_blank">
+    </a>
+    <a class="instagram" href="https://www.instagram.com/dp_chua/" target="_blank">
+      <img src="./images/Instagram.png" alt="David's Instagram">
+    </a>
+    <a class="mail" href="mailto:dp_chua@hotmail.com?subject=feedback"><img src="./images/Email.png" alt="Email me">
+    </a>
+  </div>
 
 
 
