--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 <div id="aboutme" class="About">
     <h1> About Me </h1>
     <div class="block-line"></div>
-    <h4> Full stack web developer, food lover, and recently, a fitness enthusiast. Visual specialist with a passion for coding. I am a creative thinker, a resourceful problem solver, and a jack of all trades. Coding brings out my creativity and challenges me in every possible way, which is why I am in love with it. My eagerness to learn more allows me to become a better coder each and everyday.</h4>
+    <div class="paragraph_summary">
+    <h3> I am a fullstack web developer, a foodie, an aspiring fitness enthusiast, and a visual specialist who has a keen eye for details as well as a passion for coding. I tend to think creatively, and become a resourceful problem solver; a jack of all trades. Coding brings out my inner design to create and challenges me in each way possible. My eagerness to acquire more information allows me to thrive and dedicate myself in becoming a stronger, and more knowledgeable developer everyday. </h3>
+  </div>
   </div>
 
 <div class="screen"></div>
@@ -44,7 +46,7 @@
   <h1> Language, Frameworks, and Tools </h1>
     <div class="block-line"></div>
 
-  <div class="about_row">
+    <div class="about_row">
 <!-- angularJS -->
     <div class="column">
       <i class="devicon-angularjs-plain colored"></i>
@@ -111,7 +113,7 @@
   </div>
   <!-- and more -->
   <div class="more" class="column">
-    <h4> & more.. </h4>
+    <h3> & more.. </h4>
   </div>
   </div>
 </div>
@@ -125,13 +127,22 @@
 
 <div class="container">
 
+  <div class="Apps">
+    <img src="./images/Gains.png">
+  </div>
+
+  <div class="About_Apps">
+    <p> <a href="https://gains-for-days.herokuapp.com/#/" target="_blank"> Training For Gains</a> <br />
+    <small> A work out logging application created using Ruby on Rails backend and a NodeJS/AngularJS front end. I created the app as a gym enthusiast who sees people writing their workout routine at a gym when they can lose the notepad and have it be entirely mobile. This way, the app can store the data without every worrying about forgetting a notepad to the gym. </small> </p>
+  </div>
+
   <div class="Apps" >
     <img src="./images/Kogi.jpg">
   </div>
 
   <div class="About_Apps">
     <p> <a href="https://where-is-my-kogi.herokuapp.com/" target="_blank"> Where's My Kogi</a><br />
-    <small> Still in its early stages. Where's My Kogi is a web application build using NodeJS, MongoDB, Express. It is a korean bbq tracker that logs the user's restaurant visited along with some information about the restaurant. Check out  to log your newly discovered Kbbq restaurants! </small> </p>
+    <small> Still in its early stages. Where's My Kogi is a web application built using NodeJS, MongoDB, Express. It is a Korean bbq tracker that logs the user's restaurant visited along with some information about the restaurant. I created it with the purpose of getting users a chance to keep track of Korean bbq as well as to provide some information about what a Korean bbq usually entails. Check out  to log your newly discovered Kbbq restaurants! </small> </p>
   </div>
 
   <div class="Apps">
@@ -140,7 +151,7 @@
 
   <div class="About_Apps">
     <p> <a href="https://afternoon-everglades-38921.herokuapp.com/#/" target="_blank"> What's Cooking</a> <br />
-    <small> A web application designed for weekly food planning to lead a healthy lifestyle. It is build using a full MEAN stack (MongoDB, Experss, Angular, and NodeJS). A group project that allowed us to experience a remote group interaction using Github repos to push/pull and merge code for collaboration purposes. It is a project that allowed us to appreciate github technologies in relation to version control. </small> </p>
+    <small> A web application designed for weekly food planning to lead a healthy lifestyle. It is built using a full MEAN stack (MongoDB, Experss, Angular, and NodeJS). A group project that allowed us to experience a remote group interaction using Github repos to push/pull and merge code for collaboration purposes. It is a project that allowed me to appreciate github technologies in relation to version control. </small> </p>
   </div>
 
   <div class="Apps">
@@ -149,7 +160,7 @@
 
   <div class="About_Apps">
     <p> <a href="https://my-books-application.herokuapp.com/#/" target="_blank"> Topshelf Imaginations</a> <br />
-    <small> A two day MEAN stack project that is able to create a full CRUD for a library collections of all the users in the site. </small></p>
+    <small> A two day MEAN stack project that is able to create a full CRUD for a library collections of all the users in the site. I created a simplified library collection that is simple in looks as it logs the data as if the user is writing on a notebook with the tab styling in the front end.  </small></p>
   </div>
 </div>
 
