--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="animation-body">
 
-  <div>
+<a href="portfolio.html">  <div>
     <ul class="fly-text hidden">
       <li> W </li>
       <li> E </li>
@@ -19,12 +19,13 @@
       <li> M </li>
       <li> E </li>
     </ul>
+    <br>
 
-    <a href="portfolio.html"> <div class="Button">
-      <h2> Meet the Developer </h2>
-    </div></a>
+  </div></a>
 
-  </div>
+
+
+
 
 
   </body>
